# hajong

./: CLI.hs  GameTypes.hs  Hand.hs  PrettyPrint.hs  README.md  Riichi.hs  Server.hs  TODO  Tiles.hs  Yaku.hs  build.sh  hajong.cabal  main.hs  print_example.txt  publish.sh  server-setup.sh  stack.yaml
app/: main.hs  server.hs
hajong-client-web/: .gitignore  Events.elm  Game.elm  GameTypes.elm  JSON.elm  Lounge.elm  Main.elm  README.md  Util.elm  build.sh  elm-package.json  elm.js  elm_dependencies.json  mockup.html
hajong-client-web/src/: Events.elm  Game.elm  GameTypes.elm  JSON.elm  Lounge.elm  Main.elm  Mockup.elm  Model.elm  MsgDialog.elm  PlayerInfo.elm  Util.elm  View.elm  ViewingGame.elm
hajong-server/: LICENSE  doctests.hs  hajong.cabal  test.sh
hajong-server/app/: cli.hs  server.hs
hajong-server/src/: Import.hs  Mahjong.hs  Prelude.hs
hajong-server/src/Hajong/: Client.hs  Connections.hs  Database.hs  Server.hs  Worker.hs
hajong-server/src/Hajong/Client/: CLI.hs  PrettyPrint.hs
hajong-server/src/Hajong/Database/: Queries.hs  Types.hs
hajong-server/src/Hajong/Server/: Config.hs  Internal.hs
hajong-server/src/Mahjong/: Configuration.hs  Deal.hs  Hand.hs  Kyoku.hs  Round.hs  State.hs  Tiles.hs
hajong-server/src/Mahjong/Hand/: Algo.hs  Fu.hs  Internal.hs  Mentsu.hs  Value.hs  Yaku.hs
hajong-server/src/Mahjong/Hand/Algo/: WaitTree.hs
hajong-server/src/Mahjong/Hand/Yaku/: Builder.hs  Standard.hs
hajong-server/src/Mahjong/Kyoku/: Flags.hs  Internal.hs
hajong-server/tests/: Prelude.hs  tests.hs
hajong-server/tests/HajongTest/Client/: CLI.hs  PrettyPrint.hs
hajong-server/tests/HajongTest/Server/: Server.hs  Worker.hs
hajong-server/tests/MahjongTest/: Hand.hs  HandValue.hs  Mechanics.hs  Mentsu.hs  Yaku.hs
hajong-site/: Application.hs  Foundation.hs  GameServer.hs  Import.hs  Model.hs  Settings.hs  devel.hs  hajong-site.cabal
hajong-site/Handler/: Home.hs  Personal.hs  Play.hs  SendMail.hs  Status.hs  View.hs
hajong-site/Import/: NoFoundation.hs
hajong-site/app/: devel.hs
hajong-site/config/: keter.yml  models  routes  settings.yml  sqlite.yml  test-settings.yml
hajong-site/deploy/: Procfile
hajong-site/static/css/: main.css
hajong-site/static/js/: elm.js
hajong-site/templates/: default-layout-wrapper.hamlet  default-layout.julius  default-layout.lucius  fullscreen-layout.hamlet  game-conf.hamlet  game-history.hamlet  homepage.hamlet  homepage.julius  new-game.hamlet  personal.hamlet  personal.julius  play.hamlet  play.julius  play.lucius  push-auth-token.julius  status.hamlet  support-thankyou.hamlet  support.hamlet  view-game.julius
src/: Mahjong.hs  Prelude.hs
src/Hajong/: Connections.hs  Game.hs  PrettyPrint.hs  Server.hs  Worker.hs
src/Hajong/Client/: CLI.hs  PrettyPrint.hs
src/Hajong/Game/: Hand.hs  Mechanics.hs  Mentsu.hs  Round.hs  State.hs  Tiles.hs  Types.hs  Yaku.hs
src/Hajong/Game/Yaku/: Builder.hs  Standard.hs
src/Mahjong/: Deal.hs  Hand.hs  Mechanics.hs  Round.hs  State.hs  Tiles.hs  Yaku.hs
src/Mahjong/Hand/: Algo.hs  Mentsu.hs  Value.hs
src/Mahjong/Hand/Algo/: WaitTree.hs
src/Mahjong/Hand/Yaku/: Builder.hs  Standard.hs
src/Mahjong/Yaku/: Builder.hs  Standard.hs
tests/: CLIClient.hs  CLIPrettyPrint.hs  GameMechanics.hs  GameMentsu.hs  Prelude.hs  Server.hs  Worker.hs  mytest.hs  tests.hs
tests/HajongTest/Client/: CLI.hs
tests/HajongTest/Server/: Server.hs  Worker.hs
tests/MahjongTest/: Mentsu.hs  Yaku.hs
web/: Connection.elm  Display.elm  Game.elm  GameTypes.elm  JSON.elm  Lounge.elm  Main.elm  State.elm  Util.elm  elm_dependencies.json  page.html
